--- a/css/style.css
+++ b/css/style.css
@@ -325,7 +325,7 @@ h1, h2, h3, h4, h5, h6, figure {
   top: 0;
   left: 0;
   right: 0;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.5);
 }
 .fh5co-cover > .fh5co-container {
   position: relative;
@@ -1891,7 +1891,7 @@ form label {
   width: 100%;
   height: 100%;
   z-index: 9999;
-  background: url(../images/loader.gif) center no-repeat #fff;
+  background: url(../images/loader.gif) center no-repeat #000;
 }
 
 .js .animate-box {
